@@ -523,5 +523,8 @@
     <string name="ProxySettings.ProxySettingsEnabled">Proxy settings succesfully enabled.</string>
     
     <string name="AboutActivity.ContributorsText">Contributors:\n   • LeChuck (Proxy settings);</string>
+    
+    <string name="PreferencesActivity.EnableRestoreLastPagePreferenceTitle">Restore last page</string>
+    <string name="PreferencesActivity.EnableRestoreLastPagePreferenceSummary">If checked, the last page will be restore if available.</string>
 
 </resources>
